# Frame_Viewer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OOP_Lab3_FrameViewer  README.md  cmake_install.cmake
others/lab1-my/: .gitignore  CMakeLists.txt
others/lab1-my/src/: main.cpp
others/lab1-my/src/common/: common_types.h  getline.c  getline.h  obj_format.h
others/lab1-my/src/drawer/: drawer.cpp  drawer.h
others/lab1-my/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  viewerwidget.cpp  viewerwidget.h
others/lab1-my/src/model/: edge.c  edge.h  model.c  model.h  point.c  point.h
others/lab1-my/src/projection/: projection.c  projection.h
others/lab1-my/src/task_manager/: task_manager.c  task_manager.h
others/lab2-my/: CMakeLists.txt
others/lab2-my/src/: main.cpp
others/lab2-my/src/Exception/: BaseException.h  Exceptions.h  IteratorException.h
others/lab2-my/src/Iterator/: BackwardIterator.h  BackwardIterator.hpp  BaseIterator.cpp  BaseIterator.h  ConstBackwardIterator.h  ConstBackwardIterator.hpp  ConstIterator.h  ConstIterator.hpp  Iterator.h  Iterator.hpp
others/lab2-my/src/Vector/: BaseVector.cpp  BaseVector.h  Concepts.h  Constructors.hpp  Operations.hpp  Vector.h  Vector.hpp
others/lab3-andrey/lab_03_qt/: CMakeLists.txt  consts.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
others/lab3-andrey/lab_03_qt/src/BaseObject/: BaseObject.cpp  BaseObject.hpp
others/lab3-andrey/lab_03_qt/src/Commands/: BaseCommand.hpp
others/lab3-andrey/lab_03_qt/src/Exceptions/: BaseException.hpp
others/lab3-andrey/lab_03_qt/src/Facade/: Facade.cpp  Facade.hpp
others/lab3-andrey/lab_03_qt/src/Factory/: BaseFactory.hpp
others/lab3-andrey/lab_03_qt/src/GUI/: Combiner.cpp  Combiner.hpp  Table.cpp  Table.hpp
others/lab3-andrey/lab_03_qt/src/HLR/: AllEdgesStrategy.hpp  BackFaceCullingStrategy.hpp  BaseHLRStrategy.hpp  Faces.hpp
others/lab3-andrey/lab_03_qt/src/InternalRepresentation/: FigureCommandGetInternalData.hpp  InternalDataVisitor.cpp  InternalDataVisitor.hpp  ObjectDataDialog.hpp
others/lab3-andrey/lab_03_qt/src/Managers/: BaseManager.hpp
others/lab3-andrey/lab_03_qt/src/Transforms/: Transforms.cpp  Transforms.hpp  Vec.cpp  Vec.hpp
others/lab3-andrey/lab_03_qt/uml/: lab_03.drawio
others/lab3-boris/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
others/lab3-boris/commands/: base_command.h
others/lab3-boris/commands/camera_command/: camera_commands.h  camera_commands.hpp
others/lab3-boris/commands/history_command/: history_commands.h  history_commands.hpp
others/lab3-boris/commands/model_command/: model_commands.h  model_commands.hpp
others/lab3-boris/commands/scene_command/: scene_commands.h  scene_commands.hpp
others/lab3-boris/concepts/: concepts.h
others/lab3-boris/diagramm/: diagramm.drawio
others/lab3-boris/draw/drawer/: drawer.cpp  drawer.h  qdrawer.cpp  qdrawer.h
others/lab3-boris/draw/factory/: drawer_facory.cpp  drawer_facory.h  qfactory.cpp  qfactory.h
others/lab3-boris/facade/: facade.cpp  facade.h
others/lab3-boris/load/builder/: builder.cpp  builder.h  camera_builder.cpp  camera_builder.h  model_builder.cpp  model_builder.h
others/lab3-boris/load/director/: camera_director.cpp  camera_director.h  director.cpp  director.h  model_director.cpp  model_director.h
others/lab3-boris/load/loader/: bin_loader.cpp  bin_loader.h  file_loader.cpp  file_loader.h  loader.cpp  loader.h
others/lab3-boris/managers/: base_manager.cpp  base_manager.h  draw_manager.cpp  draw_manager.h  history_manager.cpp  history_manager.h  load_manager.cpp  load_manager.h  scene_manager.cpp  scene_manager.h  transform_manager.cpp  transform_manager.h
others/lab3-boris/memento/: memento.cpp  memento.h
others/lab3-boris/object/: object.cpp  object.h
others/lab3-boris/object/camera/: camera.cpp  camera.h
others/lab3-boris/object/model/: model.cpp  model.h  model_impl.cpp  model_impl.h
others/lab3-boris/object/points_and_edges/: edge.cpp  edge.h  point.cpp  point.h
others/lab3-boris/scene/: scene.cpp  scene.h
others/lab3-boris/transformer/: transformer.cpp  transformer.h
others/lab3-boris/visitor/: base_visitor.cpp  base_visitor.h  draw_visitor.cpp  draw_visitor.h  transform_visitor.cpp  transform_visitor.h
others/lab3-maxploer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  test2.txt
others/lab3-maxploer/builder/: BaseCarcasBuilder.h  BaseDirector.cpp  BaseDirector.h  CarcasBuilder.cpp  CarcasBuilder.h  CarcasDirector.cpp  CarcasDirector.h  DirectorCreator.cpp  DirectorCreator.h  MatrixBuilder.cpp  MatrixBuilder.h  TriangleBuilder.cpp  TriangleBuilder.h
others/lab3-maxploer/command/: BaseCommand.cpp  BaseCommand.h  CameraCommand.cpp  CameraCommand.h  DrawCommand.cpp  DrawCommand.h  ModelCommand.cpp  ModelCommand.h  SceneCommand.cpp  SceneCommand.h
others/lab3-maxploer/draw/: AbstractDrawer.cpp  AbstractDrawer.h  AbstractGraphicFactory.cpp  AbstractGraphicFactory.h  DrawAll.cpp  DrawAll.h  DrawVisitor.cpp  DrawVisitor.h  QtDrawer.cpp  QtDrawer.h  QtFactory.cpp  QtFactory.h
others/lab3-maxploer/facade/: Facade.cpp  Facade.h
others/lab3-maxploer/loader/: AbstractReader.cpp  AbstractReader.h  BinaryReader.cpp  BinaryReader.h  FileReader.cpp  FileReader.h  Loader.cpp  Loader.h
others/lab3-maxploer/modelvisitor/: ModelVisitor.h  MoveVisitor.cpp  MoveVisitor.h  RotateVisitor.cpp  RotateVisitor.h  ScaleVisitor.cpp  ScaleVisitor.h
others/lab3-maxploer/object/: AbstractObject.cpp  AbstractObject.h  Model.cpp  Model.h
others/lab3-maxploer/object/camera/: Camera.cpp  Camera.h
others/lab3-maxploer/object/carcas/: AbstractCarcas.h  Carcas.cpp  Carcas.h  MatrixCarcas.cpp  MatrixCarcas.h  TriangleCarcas.cpp  TriangleCarcas.h
others/lab3-maxploer/scene/: Scene.cpp  Scene.h
others/lab3-maxploer/solution/: BaseSolution.cpp  SolutionDraw.cpp  SolutionDraw.h  SolutionLoader.cpp  SolutionLoader.h  SolutionScene.cpp  SolutionScene.h  SolutionTransform.cpp  SolutionTransform.h
others/lab3-maxploer/visitor/: AbstractVisitor.cpp  AbstractVisitor.h
(+446 files in other folders)
